[tool.poetry]
name = "poe_agent"
version = "0.1.0"
description = ""
authors = ["Seung Hwan, JUNG <digit82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
modal = "^0.64.199"
fastapi = "^0.115.2"
fastapi-poe = "^0.0.48"
pyngrok = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
